Chapter-10/predictive-scaling/hpa.yaml
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
name: java-app-autoscaler
spec:
  scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment
  name: java-app
  minReplicas: 2
  maxReplicas: 10
  metrics:
  - type: Resource
resource:
      name: cpu
      target:
        type: Utilization
        averageUtilization: 50
