Chapter-10/predictive-scaling/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: java-app
spec:
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: java-app
        subset: v1
      weight: 50
    - destination:
        host: java-app
        subset: v2
      weight: 50
